Add HFT-grade zero-allocation hot path
The tick path previously allocated a MarketDataEvent per tick and went
through String-keyed ConcurrentHashMap lookups - fine for research, not
for HFT. This adds a true ultra-low-latency pipeline:

- TickRingBuffer: Disruptor-style SPSC ring with preallocated primitive
  slots, cache-line-padded sequences, acquire/release publication, and
  producer/consumer sequence caching.
- SymbolRegistry + HftMarketDataBus: dense int symbol ids, array-indexed
  dispatch and last-price cache (no maps, no boxing), optional busy-spin
  consumer.
- StreamingIndicators: O(1)-per-tick SMA/EMA/RSI/MACD/VWAP, tested
  value-for-value identical to the batch engine.
- LatencyRecorder: zero-allocation log-linear nanosecond histogram.
- HftLatencyBenchmark: measured p50=204ns publish-to-strategy latency,
  9-12M ticks/sec sustained with a live EMA-cross+RSI workload.

73 tests passing (14 new).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>